Refactored code: Rearranged project files, cleaned up code